# rdc-bq-bridge

./: .gitignore  .python-version  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: config.yaml  config.yaml.backup
examples/: README.md  export_and_analyze.py
protos/: visitor_events.proto
queries/: query_visitor_events.py  visitor_events_queries.sql
scripts/: README.md  debug_channel_subscription.py  debug_empty_table.py  debug_keyspace_listener.py  debug_redis_subscriber.py  discover_pubsub_patterns.py  export-multiple-tickets.sh  final_verification.py  fix_visitor_events.py  monitor_redis.py  populate_sample_data.py  redis_data_generator.py  replay_avro_to_redis.py  test_blueiot_position.py  test_bq_error_fix.py  test_complete_pipeline.py  test_data_flow.py  test_redis_pubsub.py  test_routing_rules.py  test_runner.py  test_stream_recreation.py  test_ticket_id_extraction.py  verify_redis_data.py
src/: __init__.py  biometric_validator.py  bq_loader.py  bq_schema_utils.py  bq_setup.py  config.py  config.py.backup  device_ticket_mapper.py  listener_base.py  main.py  redis_connection.py  redis_data_event.py  redis_decoder.py  redis_ingestor.py  redis_listener.py  routing_manager.py  row_assembler.py  row_models.py  row_processor.py
src/exporter/: __init__.py  bq_exporter.py  cli.py  export_config.py  format_writer.py  query_builder.py
systemd/: rdc-bridge.service
tests/: __init__.py  test_config.py  test_exporter.py  test_row_assembler.py
